# rapi

./: .env  Cargo.toml  make
.cargo/: config.toml
src/: config.rs  error.rs  lib.rs  main.rs  model.rs
src/_dev_utils/: dev_db.rs  dev_db_test.rs  mod.rs
src/ctx/: mod.rs
src/database/: create.rs  database.rs  mod.rs  trait.rs
src/model/: base.rs  country.rs  error.rs  mod.rs  task.rs
src/model/store/: error.rs  mod.rs
src/routes/: m_string.rs  mirror_json.rs  mod.rs
src/web/: mw_auth.rs  routes_login.rs  routes_tickets.rs
tests/: quick_dev.rs
